# zigbee_rework

./: .gitignore  CMakeLists.txt  Pipfile  README.md
bootloader/: CMakeLists.txt  app_cfg.h  board_8258_ts0012.h  bootloader.c  version_cfg.h
converters/: Fixed_ZS-EUB2_TS0012.js  dce-devices.js
lib/boards/: board_ts0012.h  board_ts0013.h  boards.h  zs_eub_2g.h
lib/cmake/: TelinkSDK.cmake  Toolchain.cmake
lib/cmake_timestamp/: CMakeLists.txt
lib/common/: comm_cfg.h  version.h
switch/: CMakeLists.txt  app_cfg.h  app_ui.c  app_ui.h  backlightCtrl.c  backlightCtrl.h  board_8258_ts0012.h  endpointCfg.c  endpointCfg.h  endpointConfig.c  endpointRelay.c  endpointSwitch.c  endpoints.h  hardware.c  hardware.h  relayCtrl.c  relayCtrl.h  sampleSwitch.c  sampleSwitch.h  sampleSwitchCtrl.c  sampleSwitchCtrl.h  sampleSwitchEp2Cfg.c  sampleSwitchEpCfg.c  switchApp.c  switchApp.h  switchCtrl.c  switchCtrl.h  switchEp1Cfg.c  switchEp2Cfg.c  tuyaSwitch.c  tuyaSwitch.h  version_cfg.h  zb_appCb.c  zb_appCb.h  zclApp.h  zcl_basic.c  zcl_common.c  zcl_group.c  zcl_identify.c  zcl_onOff.c  (+6 more)
